Add global exception handling and refactor controllers for improved error management
- Introduced GlobalExceptionHandler to centralize error handling across controllers, providing consistent error responses and logging.
- Refactored CollectionControllerDev and ContentControllerDev to remove try-catch blocks, delegating exception handling to GlobalExceptionHandler.
- Updated response types in controller methods for better clarity and type safety.
- Enhanced validation by integrating @Valid annotations in request bodies for create and update operations.