@@ -9,13 +9,18 @@ import edens.zac.portfolio.backend.types.FilmFormat;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
+/**
+ * Production controller for Content read operations. Exception handling is
+ * delegated to
+ * GlobalExceptionHandler.
+ */
 @Slf4j
 @RequiredArgsConstructor
 @RestController
@@ -30,15 +35,9 @@ public class ContentControllerProd {
    * @return ResponseEntity with list of all tags
    */
   @GetMapping("/tags")
-  public ResponseEntity<?> getAllTags() {
-    try {
-      List<ContentTagModel> tags = contentService.getAllTags();
-      return ResponseEntity.ok(tags);
-    } catch (Exception e) {
-      log.error("Error getting all tags: {}", e.getMessage(), e);
-      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-          .body("Failed to retrieve tags: " + e.getMessage());
-    }
+  public ResponseEntity<List<ContentTagModel>> getAllTags() {
+    List<ContentTagModel> tags = contentService.getAllTags();
+    return ResponseEntity.ok(tags);
   }
 
   /**
@@ -47,15 +46,9 @@ public class ContentControllerProd {
    * @return ResponseEntity with list of all people
    */
   @GetMapping("/people")
-  public ResponseEntity<?> getAllPeople() {
-    try {
-      List<ContentPersonModel> people = contentService.getAllPeople();
-      return ResponseEntity.ok(people);
-    } catch (Exception e) {
-      log.error("Error getting all people: {}", e.getMessage(), e);
-      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-          .body("Failed to retrieve people: " + e.getMessage());
-    }
+  public ResponseEntity<List<ContentPersonModel>> getAllPeople() {
+    List<ContentPersonModel> people = contentService.getAllPeople();
+    return ResponseEntity.ok(people);
   }
 
   /**
@@ -64,53 +57,38 @@ public class ContentControllerProd {
    * @return ResponseEntity with list of all cameras
    */
   @GetMapping("/cameras")
-  public ResponseEntity<?> getAllCameras() {
-    try {
-      List<ContentCameraModel> cameras = contentService.getAllCameras();
-      return ResponseEntity.ok(cameras);
-    } catch (Exception e) {
-      log.error("Error getting all cameras: {}", e.getMessage(), e);
-      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-          .body("Failed to retrieve cameras: " + e.getMessage());
-    }
+  public ResponseEntity<List<ContentCameraModel>> getAllCameras() {
+    List<ContentCameraModel> cameras = contentService.getAllCameras();
+    return ResponseEntity.ok(cameras);
   }
 
   /**
-   * Get film metadata (film types and formats) GET /api/read/content/film-metadata
+   * Get film metadata (film types and formats) GET
+   * /api/read/content/film-metadata
    *
-   * <p>Returns all available film types with their default ISO values, and all available film
-   * formats. Used by the frontend to populate dropdowns in the image editing interface.
+   * <p>
+   * Returns all available film types with their default ISO values, and all
+   * available film
+   * formats. Used by the frontend to populate dropdowns in the image editing
+   * interface.
    *
    * @return ResponseEntity with film types and formats
    */
   @GetMapping("/film-metadata")
-  public ResponseEntity<?> getFilmMetadata() {
-    try {
-      // Get film types from database
-      List<ContentFilmTypeModel> filmTypes = contentService.getAllFilmTypes();
+  public ResponseEntity<Map<String, Object>> getFilmMetadata() {
+    List<ContentFilmTypeModel> filmTypes = contentService.getAllFilmTypes();
 
-      // Convert FilmFormat enum to response format
-      List<FilmFormatResponse> filmFormats =
-          Arrays.stream(FilmFormat.values())
-              .map(
-                  filmFormat ->
-                      new FilmFormatResponse(filmFormat.name(), filmFormat.getDisplayName()))
-              .collect(Collectors.toList());
+    List<FilmFormatResponse> filmFormats = Arrays.stream(FilmFormat.values())
+        .map(format -> new FilmFormatResponse(format.name(), format.getDisplayName()))
+        .toList();
 
-      Map<String, Object> response =
-          Map.of(
-              "filmTypes", filmTypes,
-              "filmFormats", filmFormats);
-
-      return ResponseEntity.ok(response);
-    } catch (Exception e) {
-      log.error("Error getting film metadata: {}", e.getMessage(), e);
-      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-          .body("Failed to retrieve film metadata: " + e.getMessage());
-    }
+    return ResponseEntity.ok(
+        Map.of(
+            "filmTypes", filmTypes,
+            "filmFormats", filmFormats));
   }
 
-  /** Response DTO for film formats */
+  /** Response DTO for film formats. */
   @lombok.Data
   @lombok.AllArgsConstructor
   public static class FilmFormatResponse {
